Bugfixes with fullitem api endpoint, updated openapi and updated testing database readme
